# plataforma

./: .dockerignore  .gitignore  README.md
database/migrations/: 001_init_schemas.sql  002_tables.sql  003_views_mv.sql  004_dashboard_fact_rows.sql
infra/: .env.example  docker-compose.yml  smoke-check.ps1
services/core-api/: Dockerfile  pyproject.toml
services/core-api/app/: __init__.py  config.py  db.py  loader.py  main.py  normalize.py  tile_debug.py
services/core-api/app/api/routes/: __init__.py  dashboard.py  health.py  map.py  meta.py
services/core-api/app/repositories/: __init__.py  dashboard_repository.py  debug_repository.py  map_repository.py  meta_repository.py
services/core-api/app/services/: __init__.py  dashboard_service.py  debug_service.py  map_service.py  meta_service.py
services/tileserver/: config.toml
services/web-frontend/: .env.example  Dockerfile  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
services/web-frontend/src/: App.css  App.tsx  api.ts  index.css  main.tsx
services/web-frontend/src/components/: ErrorBoundary.tsx  FilterBar.tsx  KPICard.tsx  KpiGrid.tsx
services/web-frontend/src/components/common/: EmptyState.tsx  ErrorPanel.tsx  Skeleton.tsx
services/web-frontend/src/components/layout/: PageShell.tsx  TopNav.tsx
services/web-frontend/src/hooks/: useDashboardData.ts
services/web-frontend/src/lib/: filterFromUrl.test.ts  filterFromUrl.ts
services/web-frontend/src/mocks/: handlers.ts
services/web-frontend/src/pages/: Dashboard.tsx  MapPage.tsx
(+20 files in other folders)
